--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -328,7 +328,7 @@
             android:id="@+id/channelinfo"
             android:layout_width="@dimen/vs_240"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="22.0mm"
+            android:layout_marginLeft="@dimen/vs_20"
             android:layout_marginRight="@dimen/vs_20"
             android:layout_marginBottom="@dimen/vs_20">
             <TextView
@@ -410,7 +410,7 @@
             android:layout_height="fill_parent"
             android:layout_marginLeft="@dimen/vs_280"
             android:layout_marginTop="161.0mm"
-            android:layout_marginRight="@dimen/vs_45">
+            android:layout_marginRight="@dimen/vs_40">
             <TextView
                 android:textSize="@dimen/ts_30"
                 android:textStyle="bold"
@@ -495,7 +495,7 @@
             android:layout_height="9.0mm"
             android:layout_marginLeft="280.0mm"
             android:layout_marginTop="220.0mm"
-            android:layout_marginRight="42.0mm"
+            android:layout_marginRight="37.0mm"
             android:layout_marginBottom="20.0mm"
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
@@ -510,7 +510,7 @@
             android:layout_height="fill_parent"
             android:layout_marginLeft="@dimen/vs_280"
             android:layout_marginTop="248.0mm"
-            android:layout_marginRight="@dimen/vs_45"
+            android:layout_marginRight="@dimen/vs_40"
             android:layout_marginBottom="20.0mm">
             <TextView
                 android:textSize="@dimen/ts_26"
@@ -548,11 +548,11 @@
                 android:textColor="@color/color_FFFFFF"
                 android:ellipsize="marquee"
                 android:id="@+id/tv_next_program_name"
-                android:paddingRight="@dimen/vs_20"
+                android:paddingRight="@dimen/vs_15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/vs_20"
-                android:layout_marginRight="@dimen/vs_20"
+                android:layout_marginRight="@dimen/vs_15"
                 android:text=""
                 android:singleLine="true"
                 android:shadowColor="#cc000000"
@@ -568,7 +568,7 @@
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
                 android:id="@+id/tv_right_top_tipnetspeed"
-                android:layout_width="115mm"
+                android:layout_width="115.0mm"
                 android:layout_height="wrap_content"
                 android:text="网速"/>
             <TextView
@@ -738,7 +738,7 @@
                 android:orientation="horizontal"
                 android:paddingLeft="272.0mm"
                 android:paddingTop="0.0dip"
-                android:paddingRight="33.0mm"
+                android:paddingRight="29.0mm"
                 android:paddingBottom="0.0dip"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/vs_150"
