--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,163 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
-        android:layout_width="@dimen/vs_420"
-        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/vs_20">
-
+        android:padding="@dimen/vs_20"
+        android:layout_width="@dimen/vs_420"
+        android:layout_height="fill_parent">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/vs_10"
             android:gravity="center_vertical"
-            android:orientation="vertical">
-
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/vs_10">
             <TextView
+                android:textSize="@dimen/ts_20"
+                android:textColor="@android:color/white"
+                android:gravity="center"
                 android:id="@+id/tvSearchCheckboxBtn"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/vs_50"
-                android:layout_weight="1"
                 android:background="@drawable/shape_user_focus"
                 android:focusable="true"
-                android:gravity="center"
-                android:text="指定搜索源"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-
-            <EditText
-                android:id="@+id/etSearch"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="@dimen/vs_50"
-                android:layout_marginTop="@dimen/vs_10"
+                android:text="指定搜索源"
+                android:layout_weight="1.0"/>
+            <EditText
+                android:textSize="@dimen/ts_20"
+                android:textColor="@android:color/white"
+                android:textColorHint="#99ffffff"
+                android:id="@+id/etSearch"
                 android:background="@drawable/input_search"
-                android:hint="请输入要搜索的内容"
-                android:inputType="text"
-                android:imeOptions="actionDone"
-                android:maxLines="1"
                 android:paddingLeft="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_10"
-                android:textColor="@android:color/white"
-                android:textColorHint="#99FFFFFF"
-                android:textSize="@dimen/ts_20" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="@dimen/vs_50"
                 android:layout_marginTop="@dimen/vs_10"
-                android:orientation="horizontal">
-
+                android:hint="请输入要搜索的内容"
+                android:maxLines="1"
+                android:inputType="text"
+                android:imeOptions="actionDone"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/vs_50"
+                android:layout_marginTop="@dimen/vs_10">
                 <TextView
+                    android:textSize="@dimen/ts_20"
+                    android:textColor="@android:color/white"
+                    android:gravity="center"
                     android:id="@+id/tvSearch"
-                    android:layout_width="0mm"
-                    android:layout_height="@dimen/vs_50"
-                    android:layout_weight="1"
                     android:background="@drawable/shape_user_focus"
                     android:focusable="true"
-                    android:gravity="center"
+                    android:layout_width="0.0mm"
+                    android:layout_height="@dimen/vs_50"
                     android:text="搜索"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/ts_20" />
-
+                    android:layout_weight="1.0"/>
                 <Space
                     android:layout_width="@dimen/vs_10"
-                    android:layout_height="wrap_content" />
-
+                    android:layout_height="wrap_content"/>
                 <TextView
+                    android:textSize="@dimen/ts_20"
+                    android:textColor="@android:color/white"
+                    android:gravity="center"
                     android:id="@+id/tvClear"
-                    android:layout_width="0mm"
-                    android:layout_height="@dimen/vs_50"
-                    android:layout_weight="1"
                     android:background="@drawable/shape_user_focus"
                     android:focusable="true"
-                    android:gravity="center"
+                    android:layout_width="0.0mm"
+                    android:layout_height="@dimen/vs_50"
                     android:text="清空"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/ts_20" />
+                    android:layout_weight="1.0"/>
             </LinearLayout>
         </LinearLayout>
-
         <com.github.tvbox.osc.ui.tv.widget.SearchKeyboard
             android:id="@+id/keyBoardRoot"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"/>
         <LinearLayout
+            android:orientation="vertical"
             android:id="@+id/remoteRoot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/tvAddress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/vs_20"
-                android:gravity="center_horizontal"
-                android:lineSpacingMultiplier="1.4"
+                android:textSize="@dimen/ts_20"
                 android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-
-            <ImageView
-                android:id="@+id/ivQRCode"
-                android:layout_width="300mm"
-                android:layout_height="300mm"
+                android:gravity="center_horizontal"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20mm" />
+                android:id="@+id/tvAddress"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/vs_20"
+                android:lineSpacingMultiplier="1.4"/>
+            <ImageView
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/ivQRCode"
+                android:layout_width="300.0mm"
+                android:layout_height="300.0mm"
+                android:layout_marginTop="20.0mm"/>
         </LinearLayout>
     </LinearLayout>
-
     <LinearLayout
-        android:id="@+id/llWord"
-        android:layout_width="@dimen/vs_160"
-        android:layout_height="match_parent"
         android:orientation="vertical"
+        android:id="@+id/llWord"
         android:paddingTop="@dimen/vs_20"
-        android:paddingBottom="@dimen/vs_20">
-
+        android:paddingBottom="@dimen/vs_20"
+        android:layout_width="@dimen/vs_160"
+        android:layout_height="fill_parent">
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:textSize="@dimen/ts_22"
+            android:textColor="@android:color/white"
             android:layout_gravity="center_horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/vs_10"
             android:text="热门搜索"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/ts_22" />
-
+            android:textAlignment="center"/>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:id="@+id/mGridViewWord"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:clipChildren="false"
             android:clipToPadding="false"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             app:tv_horizontalSpacingWithMargins="@dimen/vs_5"
             app:tv_selectedItemIsCentered="true"
-            app:tv_verticalSpacingWithMargins="@dimen/vs_5" />
+            app:tv_verticalSpacingWithMargins="@dimen/vs_5"/>
     </LinearLayout>
-
     <LinearLayout
-        android:id="@+id/llLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/vs_20">
-
+        android:id="@+id/llLayout"
+        android:padding="@dimen/vs_20"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:id="@+id/mGridView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:visibility="invisible"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:visibility="invisible"
-            app:tv_horizontalSpacingWithMargins="@dimen/vs_5"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
             app:tv_selectedItemIsCentered="true"
-            app:tv_verticalSpacingWithMargins="@dimen/vs_5" />
+            app:tv_verticalSpacingWithMargins="@dimen/vs_5"/>
     </LinearLayout>
 </LinearLayout>
