--- a/app/src/main/res/layout/epglist_item.xml
+++ b/app/src/main/res/layout/epglist_item.xml
@@ -26,19 +26,19 @@
             android:textColor="@android:color/white"
             android:id="@+id/tv_epg_time"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
         <TextView
             android:textSize="@dimen/ts_16"
             android:textColor="@android:color/white"
             android:ellipsize="marquee"
             android:gravity="center|left"
             android:id="@+id/tv_epg_name"
+            android:focusableInTouchMode="true"
             android:clickable="true"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:focusableInTouchMode="true"
-            android:marqueeRepeatLimit="marquee_forever"/>
+            android:marqueeRepeatLimit="marquee_forever" />
     </LinearLayout>
     <LinearLayout
         android:layout_gravity="center_vertical"
@@ -55,12 +55,13 @@
             android:background="@drawable/shape_setting_model_focus"
             android:layout_width="@dimen/vs_80"
             android:layout_height="@dimen/ts_26"
-            android:text="回看"/>
+            android:text="回看" />
         <com.github.tvbox.osc.ui.tv.widget.AudioWaveView
             android:id="@+id/wqddg_AudioWaveView"
             android:layout_width="@dimen/vs_80"
             android:layout_height="@dimen/ts_26"
             android:layout_marginTop="3.0dip"
-            android:layout_marginRight="0.0px"/>
+           
+            android:layout_marginLeft="12.mm" />
     </LinearLayout>
 </LinearLayout>
