--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -619,17 +619,17 @@
             android:layout_gravity="center|left|top"
             android:orientation="horizontal"
             android:background="@drawable/shape_thumb_bottom_name_xu"
-            android:layout_width="280.0px"
-            android:layout_height="110.0px"
-            android:layout_marginTop="0.0px"
-            android:minWidth="270.0px">
+            android:layout_width="150mm"
+            android:layout_height="65mm"
+            android:layout_marginTop="0mm"
+            android:minWidth="145.mm">
             <ImageView
                 android:layout_gravity="center"
                 android:id="@+id/iv_circle_bg"
-                android:paddingLeft="10.0px"
-                android:paddingRight="10.0px"
-                android:layout_width="100.0px"
-                android:layout_height="100.0px"
+                android:paddingLeft="5mm"
+                android:paddingRight="5mm"
+                android:layout_width="60mm"
+                android:layout_height="60mm"
                 android:src="@drawable/app_icon"/>
             <LinearLayout
                 android:gravity="center"
@@ -638,15 +638,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <com.github.tvbox.osc.ui.tv.widget.MarqueeTextView
-                    android:textSize="30.0px"
+                    android:textSize="17mm"
                     android:textColor="#fffcffff"
                     android:ellipsize="marquee"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:id="@+id/tv_right_top_channel_name"
-                    android:paddingTop="5.0px"
-                    android:paddingRight="10.0px"
-                    android:paddingBottom="2.0px"
+                    android:paddingTop="4mm"
+                    android:paddingRight="5mm"
+                    android:paddingBottom="5mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="测试频道"
@@ -654,13 +654,13 @@
                     android:layout_toRightOf="@+id/iv_circle_bg"
                     android:marqueeRepeatLimit="marquee_forever"/>
                 <TextView
-                    android:textSize="30.0px"
+                    android:textSize="17mm"
                     android:textColor="#fffcffff"
                     android:ellipsize="marquee"
                     android:gravity="center"
                     android:layout_gravity="center"
-                    android:paddingRight="10.0px"
-                    android:paddingBottom="5.0px"
+                    android:paddingRight="5mm"
+                    android:paddingBottom="5mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="直播中"
@@ -842,17 +842,18 @@
         android:id="@+id/tv_left_top_xu"
         android:background="@drawable/shape_thumb_bottom_name_xu"
         android:visibility="gone"
-        android:layout_width="280.0px"
-        android:layout_height="110.0px"
-        android:layout_marginTop="0.0px"
-        android:minWidth="270.0px">
+        android:layout_width="150mm"
+        android:layout_height="65mm"
+        android:layout_marginTop="0mm"
+        android:minWidth="145mm">
         <ImageView
             android:layout_gravity="center"
+            android:gravity="center"
             android:id="@+id/iv_back_bg"
-            android:paddingLeft="10.0px"
-            android:paddingRight="10.0px"
-            android:layout_width="100.0px"
-            android:layout_height="100.0px"
+            android:paddingLeft="5mm"
+            android:paddingRight="5mm"
+            android:layout_width="60mm"
+            android:layout_height="60mm"
             android:src="@drawable/app_icon"/>
         <LinearLayout
             android:gravity="center"
@@ -861,15 +862,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <com.github.tvbox.osc.ui.tv.widget.MarqueeTextView
-                android:textSize="30.0px"
+                android:textSize="17mm"
                 android:textColor="#fffcffff"
                 android:ellipsize="marquee"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:id="@+id/tv_right_top_epg_name"
-                android:paddingTop="5.0px"
-                android:paddingRight="10.0px"
-                android:paddingBottom="2.0px"
+                android:paddingTop="4mm"
+                android:paddingRight="5mm"
+                android:paddingBottom="5mm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="测试频道"
@@ -877,14 +878,14 @@
                 android:layout_toRightOf="@+id/iv_back_bg"
                 android:marqueeRepeatLimit="marquee_forever"/>
             <TextView
-                android:textSize="30.0px"
+                android:textSize="17mm"
                 android:textColor="#fffcffff"
                 android:ellipsize="marquee"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:id="@+id/tv_right_top_type"
-                android:paddingRight="10.0px"
-                android:paddingBottom="5.0px"
+                android:paddingRight="5mm"
+                android:paddingBottom="5mm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="回看中"
