--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -434,6 +434,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="暂无信息"
+                android:paddingRight="5mm"
+                android:clipChildren="false"
+                android:clipToPadding="false"
                 android:singleLine="true"
                 android:shadowColor="#cc000000"
                 android:shadowDx="5.0"
@@ -449,7 +452,7 @@
                 android:paddingRight="@dimen/vs_15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/vs_20"
+                android:layout_marginLeft="@dimen/vs_15"
                 android:layout_marginRight="@dimen/vs_15"
                 android:text=""
                 android:singleLine="true"
@@ -536,6 +539,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="暂无信息"
+                android:paddingRight="5mm"
+                android:clipChildren="false"
+                android:clipToPadding="false"
                 android:singleLine="true"
                 android:shadowColor="#cc000000"
                 android:shadowDx="5.0"
@@ -551,7 +557,7 @@
                 android:paddingRight="@dimen/vs_15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/vs_20"
+                android:layout_marginLeft="@dimen/vs_15"
                 android:layout_marginRight="@dimen/vs_15"
                 android:text=""
                 android:singleLine="true"
