--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -431,12 +431,12 @@
                 android:textColor="@color/color_FFFFFF"
                 android:ellipsize="marquee"
                 android:id="@+id/tv_current_program_time"
+                android:paddingRight="5.0mm"
+                android:clipChildren="false"
+                android:clipToPadding="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="暂无信息"
-                android:paddingRight="5mm"
-                android:clipChildren="false"
-                android:clipToPadding="false"
                 android:singleLine="true"
                 android:shadowColor="#cc000000"
                 android:shadowDx="5.0"
@@ -536,12 +536,12 @@
                 android:textColor="@color/color_FFFFFF"
                 android:ellipsize="marquee"
                 android:id="@+id/tv_next_program_time"
+                android:paddingRight="5.0mm"
+                android:clipChildren="false"
+                android:clipToPadding="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="暂无信息"
-                android:paddingRight="5mm"
-                android:clipChildren="false"
-                android:clipToPadding="false"
                 android:singleLine="true"
                 android:shadowColor="#cc000000"
                 android:shadowDx="5.0"
@@ -820,6 +820,7 @@
             android:layout_gravity="center|right"
             android:paddingLeft="@dimen/vs_10"
             android:focusable="false"
+            android:id="@+id/iv_play_pause"
             android:focusableInTouchMode="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
