--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/ivThumb"
                 android:layout_width="@dimen/vs_240"
                 android:layout_height="@dimen/vs_320"
+                android:layout_marginLeft="11mm"
                 android:scaleType="fitXY"/>
             <View
                 android:id="@+id/previewPlayerPlace"
