--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,8 +20,9 @@
             android:layout_marginTop="@dimen/vs_10">
             <ImageView
                 android:id="@+id/ivThumb"
+                android:layout_marginTop="@dimen/vs_5"
                 android:layout_width="@dimen/vs_240"
-                android:layout_height="@dimen/vs_320"
+                android:layout_height="314mm"
                 android:layout_marginLeft="11mm"
                 android:scaleType="fitXY"/>
             <View
