--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -1,60 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:layout_width="@dimen/vs_680"
-    android:layout_height="@dimen/vs_570"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:id="@+id/root"
+        android:id="@id/root"
         android:background="@drawable/shape_dialog_bg_main"
-        android:layout_width="@dimen/vs_440"
-        android:layout_height="@dimen/vs_570">
+        android:layout_width="@dimen/vs_420"
+        android:layout_height="fill_parent">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:weightSum="2">
+            android:layout_marginTop="@dimen/vs_10"
+            android:weightSum="2.0">
             <TextView
-                android:textSize="@dimen/vs_28"
+                android:textSize="@dimen/ts_26"
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:id="@+id/checkAll"
+                android:id="@id/checkAll"
                 android:background="@drawable/button_dialog_main"
                 android:padding="@dimen/vs_20"
                 android:focusable="true"
                 android:clickable="true"
-                android:layout_width="0dp"
+                android:layout_width="0.0dip"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/vs_10"
                 android:text="全选"
-                android:layout_marginLeft="@dimen/vs_148"
-                android:layout_marginTop="@dimen/vs_15"
-                android:layout_weight="1"/>
+                android:layout_weight="1.0"/>
             <TextView
-                android:textSize="@dimen/vs_28"
+                android:textSize="@dimen/ts_26"
                 android:textColor="@color/color_FFFFFF"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:id="@+id/clearAll"
+                android:id="@id/clearAll"
                 android:background="@drawable/button_dialog_main"
                 android:padding="@dimen/vs_20"
                 android:focusable="true"
                 android:clickable="true"
-                android:layout_width="0dp"
+                android:layout_width="0.0dip"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/vs_15"
-                android:layout_marginLeft="@dimen/vs_15"
-                android:layout_marginRight="@dimen/vs_148"
-                android:text="全不选"/>
+                android:layout_marginLeft="@dimen/vs_10"
+                android:layout_marginRight="@dimen/vs_10"
+                android:text="全不选"
+                android:layout_weight="1.0"/>
         </LinearLayout>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:orientation="vertical"
-            android:layout_gravity="center"
-            android:id="@+id/mGridView"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/vs_570"/>
+            android:id="@id/mGridView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </FrameLayout>
