--- a/app/src/main/res/layout/review_toast.xml
+++ b/app/src/main/res/layout/review_toast.xml
@@ -13,7 +13,7 @@
         android:id="@+id/toastImage"
         android:layout_width="197.0mm"
         android:layout_height="100.0mm"
-        android:src="@drawable/welcome"/>
+        android:src="@drawable/review"/>
     <TextView
         android:textSize="22.0mm"
         android:textColor="#ffffffff"
@@ -23,7 +23,7 @@
         android:id="@+id/toastText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="当前直播中，再按一次返回键退出直播！"
+        android:text="回看已结束！如未成功播放请更换直播源！"
         android:shadowColor="#ff000000"
         android:shadowDx="2.0"
         android:shadowDy="2.0"
