--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -10,8 +10,7 @@
         android:id="@+id/root"
         android:background="@drawable/shape_dialog_bg_main"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_margin="@dimen/vs_70">
+        android:layout_height="516mm">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
