--- a/app/src/main/res/layout/item_dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/item_dialog_checkbox_search.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
-        android:layout_gravity="center"
         android:gravity="center"
+        android:layout_gravity="center"
         android:paddingLeft="@dimen/vs_10"
         android:paddingTop="2.5mm"
         android:paddingRight="@dimen/vs_10"
@@ -14,8 +14,9 @@
         android:layout_height="wrap_content">
         <CheckBox
             android:textSize="@dimen/ts_24"
-            android:id="@+id/oneSearchSource"
             android:gravity="center"
+            android:id="@+id/oneSearchSource"
+            android:paddingRight="@dimen/vs_10"
             android:background="@drawable/button_dialog_main"
             android:focusable="true"
             android:clickable="true"
