--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -8,6 +8,8 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:id="@+id/root"
+        android:paddingLeft="@dimen/vs_10"
+        android:paddingRight="@dimen/vs_10"
         android:background="@drawable/shape_dialog_bg_main"
         android:layout_width="fill_parent"
         android:layout_height="494.0mm">
@@ -30,7 +32,6 @@
                 android:clickable="true"
                 android:layout_width="0.0dip"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/vs_10"
                 android:text="全选"
                 android:layout_weight="1.0"/>
             <TextView
@@ -46,13 +47,13 @@
                 android:layout_width="0.0dip"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/vs_10"
-                android:layout_marginRight="@dimen/vs_10"
                 android:text="全不选"
                 android:layout_weight="1.0"/>
         </LinearLayout>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:orientation="vertical"
             android:id="@+id/mGridView"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="7.5mm"/>
