--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -614,19 +614,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
-        android:layout_marginTop="25dp"
-        android:layout_marginRight="40dp"
+		android:paddingRight="15mm"
+        android:layout_marginTop="25mm"
+        android:layout_marginRight="25mm"
         android:background="@android:color/transparent"
 		android:inputType="number"
         android:digits="0123456789"
         android:clickable="false"
         android:focusable="false"
         android:textColor="@android:color/white"
-        android:textSize="96mm"
+        android:textSize="90mm"
         android:textStyle="bold"
 		android:shadowColor="#cc000000"
         android:shadowDx="5.0"
-        android:shadowRadius="5.0"
+		android:shadowDy="5.0"
+        android:shadowRadius="2.0"
         android:visibility="gone" />
     <RelativeLayout
         android:layout_gravity="center|left|top"
