--- a/app/src/main/res/layout/item_dialog_select.xml
+++ b/app/src/main/res/layout/item_dialog_select.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tvName"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:background="@drawable/button_dialog_main"
-    android:clickable="true"
-    android:focusable="true"
-    android:gravity="center"
-    android:padding="@dimen/vs_10"
-    android:text="@{name}"
-    android:textColor="@color/color_FFFFFF"
+<TextView
     android:textSize="@dimen/ts_22"
-    tools:text="11111111111111" />
+    android:textColor="@color/color_FFFFFF"
+    android:gravity="center"
+    android:layout_gravity="center"
+    android:id="@+id/tvName"
+    android:background="@drawable/button_dialog_main"
+    android:padding="@dimen/vs_10"
+    android:focusable="true"
+    android:clickable="true"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:singleLine="true"
+    android:marqueeRepeatLimit="marquee_forever"
+    android:text="\@{name}"
+    xmlns:android="http://schemas.android.com/apk/res/android"/>
