--- a/app/src/main/res/layout/item_dialog_select.xml
+++ b/app/src/main/res/layout/item_dialog_select.xml
@@ -11,7 +11,8 @@
     android:clickable="true"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:singleLine="true"
-    android:marqueeRepeatLimit="marquee_forever"
     android:text="\@{name}"
+    android:singleLine="true"
+    android:ellipsize="marquee"
+    android:marqueeRepeatLimit="marquee_forever"
     xmlns:android="http://schemas.android.com/apk/res/android"/>
