--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -184,6 +184,7 @@
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
                         android:id="@+id/llHomeRecStyle"
+						android:visibility="gone"
                         android:background="@drawable/shape_setting_model_focus"
                         android:paddingLeft="@dimen/vs_20"
                         android:paddingRight="@dimen/vs_20"
@@ -206,6 +207,42 @@
                             android:textSize="@dimen/ts_24"
                             android:textColor="@android:color/white"
                             android:id="@+id/showRecStyleText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:textSize="@dimen/ts_30"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/vs_10"
+                            android:text=">"/>
+                    </LinearLayout>
+                   <LinearLayout
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:id="@+id/llHomeLive"
+                        android:background="@drawable/shape_setting_model_focus"
+                        android:paddingLeft="@dimen/vs_20"
+                        android:paddingRight="@dimen/vs_20"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_0"
+                        android:layout_height="fill_parent"
+                        android:layout_marginLeft="@dimen/vs_5"
+                        android:layout_weight="1.0">
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="启动时进直播"/>
+                        <Space
+                            android:layout_width="0.0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1.0"/>
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:id="@+id/tvHomeDefaultShow"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
                         <TextView
