--- a/app/src/main/res/layout/item_dialog_select.xml
+++ b/app/src/main/res/layout/item_dialog_select.xml
@@ -12,4 +12,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="\@{name}"
+    android:singleLine="true"
+    android:ellipsize="marquee"
+    android:marqueeRepeatLimit="marquee_forever"
     xmlns:android="http://schemas.android.com/apk/res/android"/>
