--- a/app/src/main/res/drawable/button_detail_desc.xml
+++ b/app/src/main/res/drawable/button_detail_desc.xml
@@ -3,10 +3,7 @@
     <item android:state_focused="true">
         <shape>
             <corners android:radius="@dimen/vs_20"/>
-            <solid android:color="@color/color_3D3D3D"/>
-            <stroke
-                android:width="2.0mm"
-                android:color="@android:color/white"/>
+            <solid android:color="@color/color_1890FF"/>
         </shape>
     </item>
     <item android:state_focused="false">
