--- a/app/src/main/res/drawable/button_detail_collect.xml
+++ b/app/src/main/res/drawable/button_detail_collect.xml
@@ -2,15 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true">
         <shape>
-            <corners android:radius="@dimen/vs_20" />
-            <solid android:color="@color/color_FF0057" />
-            <stroke android:width="2mm" android:color="@android:color/white" />
+            <corners android:radius="@dimen/vs_20"/>
+            <solid android:color="@color/color_1890FF"/>
         </shape>
     </item>
     <item android:state_focused="false">
         <shape>
-            <corners android:radius="@dimen/vs_20" />
-            <solid android:color="@color/color_FF0057" />
+            <corners android:radius="@dimen/vs_20"/>
+            <solid android:color="@color/color_3D3D3D"/>
         </shape>
     </item>
 </selector>
