--- a/app/src/main/res/drawable/button_detail_desc.xml
+++ b/app/src/main/res/drawable/button_detail_desc.xml
@@ -12,4 +12,16 @@
             <solid android:color="@color/color_3D3D3D"/>
         </shape>
     </item>
+    <item android:state_pressed="true">
+        <shape>
+            <corners android:radius="@dimen/vs_20"/>
+            <solid android:color="@color/color_1890FF"/>
+        </shape>
+    </item>
+    <item android:state_pressed="false">
+        <shape>
+            <corners android:radius="@dimen/vs_20"/>
+            <solid android:color="@color/color_3D3D3D"/>
+        </shape>
+    </item>
 </selector>
